
- Variable node weights

- More than one user defined power function is allowed.

- Error reports can be saved as zip files.

- Improved graph analysis

- More correlation matrices for standard designs + added unbalanced designs.

- Improved focus keeping and reliability of description text field.

- Improved png export of graphs: Each side has only 5 pixel border.

- Option for graph creation: If the "add node" button is selected each further click 
  adds nodes until another button is clicked. Similar option for edges. 
  (But do not place nodes above other nodes.)

- Updated references

- Fixed: GUI was more prone to rounding errors

- Fixed: Main vignette was missing in the binary zips

- Experimental: Support for entangled graphs in the GUI

- Experimental: Support for adaptive studies in the GUI
    
- Experimental: Toolkit for annotating graphs (+TikZ export support of annotations)


Version 0.7-4 (22-01-2012, Rev. 1096)
=====================================

- Many layout improvements.

- Edges have further attributes like color.

- Experimental support for copying the graph directly to the system clip board.
  (Seems to work for Windows - but no luck for Linux yet.)

- For people who create graphs in R and set the layout in the GUI: 
  If a node is dragged, edge weights also move except when they are "fixed".
  A node is set fixed, if it is dragged itself. 
  Saving and reloading a graph fixes all edges.

- LookNFeel and font size is now saved between sessions.
  
- CI dialog remembers less / greater option

- Thanks to .Rinstignore the file size of the installed packages is further reduced.

- Fixed: plotCI did not draw the CIs if all finite points were the same.

- Fixed: The bundled version closes the R console if the GUI is closed.
  
- Fixed: Report generation did not finish if no testing was performed beforehand.

 49 files changed, 1090 insertions(+), 561 deletions(-)


Version 0.7-3 (16-01-2012, Rev. 1057)
=====================================
