@@ -18,6 +18,15 @@ Fehler in if (m[i, node] * m[node, i] < 1) { : Argument hat Länge 0
 
 High priority:
 ==============
+- graphTest's last.alphas at least contain strange NaN in some cases
+g <- parallelGatekeeping()
+graphTest(pvalues=c(0, 1, 0, 0), alpha=0.05, graph=graph)
+[...]
+attr(,"last.alphas")
+[1] NaN NaN   0   0
+
+- graphTest renames hypotheses to H1...Hn or drops them completely in the output
+
 - Björns Mail
 - "Note that with the exceptions of INDEX, LICENSE/LICENCE and NEWS, information files at the top level
   of the package will not be installed and so not be known to users of Windows and Mac OS X 
