@@ -22,6 +22,8 @@ Version 0.7-5 (??-01-2012, Rev. 11??)
 
 - Improved png export of graphs: Each side has only 5 pixel border.
 
+- Defaults for epsilon in gMCP and substituteEps are now matching (10^{-3}).
+
 - Option for graph creation: If the "add node" button is selected each further click 
   adds nodes until another button is clicked. Similar option for edges. 
   (But do not place nodes above other nodes.)
